--- a/roles/chrony/tasks/install.yml
+++ b/roles/chrony/tasks/install.yml
@@ -1,16 +1,17 @@
 ---
 - name: Install Chorny - Debian based distributions
-  tags: [chrony, chrony-install]
+  tags: chrony
   apt:
     name: chrony
     state: present
-    update_cache: yes
+    update_cache: true
     cache_valid_time: 3600
   when: ansible_pkg_mgr == 'apt'
 
 - name: Install Chrony - RedHat based distributions
-  tags: [chrony, chrony-install]
+  tags: chrony
   yum:
     name: chrony
     state: present
+    update_cache: true
   when: ansible_pkg_mgr == 'yum'
