--- a/roles/chrony/tasks/main.yml
+++ b/roles/chrony/tasks/main.yml
@@ -5,6 +5,14 @@
 
 - name: Restart chrony
   become: true
-  tags: [chrony,chrony-config,chrony-restart]
+  tags: [chrony, chrony-config, chrony-restart]
   command: /bin/true
   notify: Restart chrony
+  when: ansible_pkg_mgr == 'apt'
+
+- name: Restart chronyd
+  become: true
+  tags: [chrony, chrony-config, chrony-restart]
+  command: /bin/true
+  notify: Restart chronyd
+  when: ansible_pkg_mgr == 'yum'
