feat(Chrony): Making the Chrony role more generic

--- a/roles/chrony/defaults/main.yml
+++ b/roles/chrony/defaults/main.yml
@@ -7,7 +7,7 @@ public_ntp_servers:
   - time3.google.com
   - time4.google.com
 
-chrony_package: chrony
-chrony_service: chrony
-chrony_dir: /etc/chrony/
-chrony_filename: chrony.conf
+chrony_package: default
+chrony_service: default
+chrony_dir: default
+chrony_filename: default
