hotfix(Chrony): Install process broken

--- a/roles/chrony/tasks/redhat.yml
+++ b/roles/chrony/tasks/redhat.yml
@@ -2,5 +2,6 @@
 - name: Override Chrony defaults for RedHat like systems.
   set_fact:
     chrony_service: chronyd
+    chrony_package: chrony
     chrony_dir: /etc/
   when: chrony_dir == 'default' and ansible_pkg_mgr == 'yum'
