--- a/roles/chrony/tasks/debian.yml
+++ b/roles/chrony/tasks/debian.yml
@@ -2,5 +2,6 @@
 - name: Override Chrony defaults for Debian systems.
   set_fact:
     chrony_service: chronyd
+    chrony_package: chrony
     chrony_dir: /etc/chrony/
   when: chrony_dir == 'default' and ansible_pkg_mgr == 'apt'
