--- a/roles/chrony/defaults/main.yml
+++ b/roles/chrony/defaults/main.yml
@@ -7,7 +7,7 @@ public_ntp_servers:
   - time3.google.com
   - time4.google.com
 
-chrony_package: default
-chrony_service: default
-chrony_dir: default
-chrony_filename: default
+chrony_package: DEFAULT
+chrony_service: DEFAULT
+chrony_dir: DEFAULT
+chrony_filename: DEFAULT
