--- a/roles/chrony/tasks/configure.yml
+++ b/roles/chrony/tasks/configure.yml
@@ -3,7 +3,7 @@
   tags: [chrony, chrony-config]
   template:
     src: chrony.conf.j2
-    dest: "{{ chrony_dir }}{{ chrony_filename }}"
+    dest: "{{ chrony_dir }}/{{ chrony_filename }}"
     owner: root
     group: root
     mode: 0644
