--- a/roles/chrony/tasks/main.yml
+++ b/roles/chrony/tasks/main.yml
@@ -1,6 +1,20 @@
 ---
 # tasks file for chrony
 
-- include_tasks: validate.yml
+- name: Validate if the public_ntp_servers is not none
+  tags: [chrony, chrony-validate]
+  assert:
+    that: public_ntp_servers is not none and ( public_ntp_servers | length > 0)
+    fail_msg: "public_ntp_servers is not set"
+    success_msg: "The item public_ntp_servers is defined"
+
+- name: Load the Debian specific defaults
+  include_tasks: debian.yml
+  when: ansible_pkg_mgr == 'apt'
+
+- name: Load the RedHat specific defaults
+  include_tasks: redhat.yml
+  when: ansible_pkg_mgr == 'yum'
+
 - include_tasks: install.yml
 - include_tasks: configure.yml
