--- a/roles/chrony/tasks/main.yml
+++ b/roles/chrony/tasks/main.yml
@@ -1,12 +1,12 @@
 ---
 # tasks file for chrony
 
-- name: Validate if the public_ntp_servers is not none
+- name: Validate if the ntp_servers is not none
   tags: [chrony, chrony-validate]
   assert:
-    that: public_ntp_servers is not none and ( public_ntp_servers | length > 0)
-    fail_msg: "public_ntp_servers is not set"
-    success_msg: "The item public_ntp_servers is defined"
+    that: ntp_servers is not none and ( ntp_servers | length > 0)
+    fail_msg: "ntp_servers is not set"
+    success_msg: "The item ntp_servers is defined"
 
 - name: Load the Debian specific defaults
   include_tasks: debian.yml
