feat(Chrony): Support RedHat system family (#3)
* feat(Chrony): Support RedHat system family

* feat(Chrony): Support RedHat system family

* fix(Chrony): Add new line end of the configure.yml

* fix(Chrony): Fixes some issues

* feat(Chrony): Add validate.yml to public_ntp_servers

* feat(Chrony): set_fact Override chrony defaults for RedHat systems

* fix(Chrony): Fix README.md

* feat(Chrony): Ensuring that is enabled after the restart

* fix(Chrony): Deleting unused file

* feat(Chrony): Making the Chrony role more generic

* Update debian.yml

Update the chrony_dir for the Debian OS family

* hotfix(Chrony): Install process broken

* fix(Chrony): Remove black line on install.yml task

* fix(Chrony): Fixing the last review comments

* fix(Chrony): Change public_ntp_servers to ntp_servers

--- a/roles/chrony/defaults/main.yml
+++ b/roles/chrony/defaults/main.yml
@@ -1,8 +1,13 @@
 ---
 # defaults file for chrony
-public_ntp_servers:
+ntp_servers:
   - time.google.com
   - time1.google.com
   - time2.google.com
   - time3.google.com
   - time4.google.com
+
+chrony_package: DEFAULT
+chrony_service: DEFAULT
+chrony_dir: DEFAULT
+chrony_filename: DEFAULT
