fix(mariadb): Fixing quotes usage

--- a/roles/mariadb/tasks/debian.yml
+++ b/roles/mariadb/tasks/debian.yml
@@ -2,7 +2,7 @@
 
 - name: Update all packages on {{ ansible_distribution }}.
   apt:
-    name: "*"
+    name: '*'
     state: present
     update_cache: true
 
