--- a/roles/mariadb/defaults/main.yml
+++ b/roles/mariadb/defaults/main.yml
@@ -1,4 +1,4 @@
 ---
 # defaults file for mariadb
-mariadb_server_version: "10.6"
-mariadb_server_architecture: "amd64"
+mariadb_server_version: '10.6'
+mariadb_server_architecture: 'amd64'
