--- a/roles/mariadb/meta/main.yml
+++ b/roles/mariadb/meta/main.yml
@@ -6,12 +6,12 @@ galaxy_info:
 
   license: GPL-3.0-only
 
-  min_ansible_version: "2.1"
+  min_ansible_version: '2.1'
 
   platforms:
     - name: Ubuntu
       versions:
-        - "jammy"
+        - 'focal'
   galaxy_tags: []
 
 dependencies: []
