--- a/roles/mariadb/tasks/redhat.yml
+++ b/roles/mariadb/tasks/redhat.yml
@@ -1,7 +1,7 @@
 ---
 - name: Update all packages on {{ ansible_distribution }}.
   yum:
-    name: "*"
+    name: '*' 
     state: present
 
 - name: Add MariaDB GPG key on {{ ansible_distribution }}.
