fix(mariadb): Delete dots at end of play names

--- a/roles/mariadb/tasks/main.yml
+++ b/roles/mariadb/tasks/main.yml
@@ -1,12 +1,12 @@
 ---
 # tasks file for mariadb
 
-- name: Set mariadb_server_architecture to amd64.
+- name: Set mariadb_server_architecture to amd64
   set_fact:
     mariadb_server_architecture: 'amd64'
   when : ansible_architecture == 'x86_64'
 
-- name: Set mariadb_server_architecture to aarch64.
+- name: Set mariadb_server_architecture to aarch64
   set_fact:
     mariadb_server_architecture: 'aarch64'
   when : ansible_architecture == 'aarch64'
