--- a/roles/mariadb/tasks/debian.yml
+++ b/roles/mariadb/tasks/debian.yml
@@ -1,38 +1,37 @@
 ---
 
-- name: Update all packages on {{ ansible_distribution }}
+- name: Update repositories cache
   apt:
     name: '*'
     state: present
-    update_cache: true
 
-- name: Install prerequisites packages of MariaDB Server on {{ ansible_distribution }}
-  apt: name={{ item }} state=present update_cache=yes
+- name: Install prerequisites packages of MariaDB Server
+  apt: name={{ item }} state=present
   with_items:
     - software-properties-common
     - dirmngr
     - apt-transport-https
 
-- name: Add MariaDB GPG key on {{ ansible_distribution }}
+- name: Add MariaDB GPG key
   apt_key:
     id: F1656F24C74CD1D8
     url: https://mariadb.org/mariadb_release_signing_key.asc
     state: present
 
-- name: Add MariaDB repository on {{ ansible_distribution }}
+- name: Add MariaDB repository
   apt_repository:
     repo: "deb [arch={{ mariadb_server_architecture }}] https://mirror1.cl.netactuate.com/mariadb/repo/{{ mariadb_server_version }}/{{ ansible_distribution | lower }} {{ ansible_facts.distribution_release }} main"
     state: present
     filename: MariaDB
 
-- name: Install MariaDB Server on {{ ansible_distribution }}
+- name: Install MariaDB Server and update cache repository
   apt:
     name: mariadb-server
     state: present
     update_cache: yes
     cache_valid_time: 3600
 
-- name: Ensure MariaDB Server is running after reboot
+- name: Ensure MariaDB Server is running after a reboot
   service:
     name: mariadb
     enabled: yes
