--- a/roles/mariadb/tasks/main.yml
+++ b/roles/mariadb/tasks/main.yml
@@ -4,11 +4,11 @@
 - name: Set mariadb_server_architecture to amd64
   set_fact:
     mariadb_server_architecture: 'amd64'
-  when : ansible_architecture == 'x86_64'
+  when : force_ansible_architecture is none and ansible_architecture == 'x86_64'
 
 - name: Set mariadb_server_architecture to aarch64
   set_fact:
     mariadb_server_architecture: 'aarch64'
-  when : ansible_architecture == 'aarch64'
+  when : force_ansible_architecture is none and ansible_architecture == 'aarch64'
 
 - include_tasks: prerequisites.yml
