fix(mariadb): Task for restarting MariaDB service

--- a/roles/mariadb/handlers/main.yml
+++ b/roles/mariadb/handlers/main.yml
@@ -1,2 +1,7 @@
 ---
 # handlers file for mariadb
+- name: Restart MariaDB Server
+  become: true
+  service:
+    name: mariadb
+    state: restarted
