--- a/roles/mariadb/tasks/redhat.yml
+++ b/roles/mariadb/tasks/redhat.yml
@@ -24,6 +24,7 @@
   yum:
     name: mariadb-server
     state: present
+  notify: Restart MariaDB Server
 
 - name: Ensure MariaDB Server is running after reboot
   tags: [mariadb]
