feat(mariadb): Add task Start MariaDB Server

--- a/roles/mariadb/handlers/main.yml
+++ b/roles/mariadb/handlers/main.yml
@@ -5,3 +5,9 @@
   service:
     name: mariadb
     state: restarted
+
+- name: Start MariaDB Server
+  tags: [mariadb]
+  service:
+    name: mariadb
+    state: started
