--- a/roles/mariadb/tasks/redhat.yml
+++ b/roles/mariadb/tasks/redhat.yml
@@ -24,11 +24,10 @@
   yum:
     name: mariadb-server
     state: present
-  notify: Restart MariaDB Server
+  notify: Start MariaDB Server
 
 - name: Ensure MariaDB Server is running after reboot
   tags: [mariadb]
   service:
     name: mariadb
     enabled: yes
-    state: started
