--- a/roles/chrony/tasks/debian.yml
+++ b/roles/chrony/tasks/debian.yml
@@ -4,4 +4,5 @@
     chrony_service: chronyd
     chrony_package: chrony
     chrony_dir: /etc/chrony/
+    chrony_filename: "{{ (chrony_filename == 'DEFAULT') | ternary ('chrony.conf', chrony_filename) }}"
   when: chrony_dir == 'DEFAULT' and ansible_pkg_mgr == 'apt'
