fix(mariadb): if else sect_fact mariadb_server_architecture.

--- a/roles/mariadb/tasks/main.yml
+++ b/roles/mariadb/tasks/main.yml
@@ -1,14 +1,8 @@
 ---
 # tasks file for mariadb
 
-- name: Set mariadb_server_architecture to amd64
+- name: Set MariaDB Server architecture
   set_fact:
-    mariadb_server_architecture: 'amd64'
-  when : force_ansible_architecture is none and ansible_architecture == 'x86_64'
-
-- name: Set mariadb_server_architecture to aarch64
-  set_fact:
-    mariadb_server_architecture: 'aarch64'
-  when : force_ansible_architecture is none and ansible_architecture == 'aarch64'
+    mariadb_server_architecture: "{{'amd64' if ansible_architecture == 'x86_64' else ansible_architecture }}"
 
 - include_tasks: prerequisites.yml
