--- a/roles/mariadb/tasks/debian.yml
+++ b/roles/mariadb/tasks/debian.yml
@@ -34,7 +34,7 @@
   apt:
     name: mariadb-server
     state: present
-  notify: Start MariaDB Server
+  notify: start mariadb server
 
 - name: Ensure MariaDB Server is running after a reboot
   tags: [mariadb]
