fix(mariadb): Delete prerequisites.yml and add the plays on the main.yml

--- a/roles/mariadb/tasks/main.yml
+++ b/roles/mariadb/tasks/main.yml
@@ -1,4 +1,10 @@
 ---
 # tasks file for mariadb
 
-- include_tasks: prerequisites.yml
+- name: Include debian.yml for Debian OS family
+  include_tasks: debian.yml
+  when: ansible_os_family == 'Debian'
+
+- name: Include redhat.yml for RedHat OS family
+  include_tasks: redhat.yml
+  when: ansible_os_family == 'RedHat'
