--- a/roles/mariadb/meta/main.yml
+++ b/roles/mariadb/meta/main.yml
@@ -12,6 +12,6 @@ galaxy_info:
     - name: Ubuntu
       versions:
         - 'focal'
-  galaxy_tags: []
+  galaxy_tags: [mariadb,databases]
 
 dependencies: []
