--- a/roles/mariadb/tasks/debian.yml
+++ b/roles/mariadb/tasks/debian.yml
@@ -1,7 +1,7 @@
 ---
 - name: Install prerequisites packages of MariaDB Server
   tags: [mariadb]
-  apt: name={{ item }} state=present update_cache=yes
+  apt: name={{ item }} state=present
   with_items:
     - software-properties-common
     - dirmngr
