--- a/roles/mariadb/tasks/debian.yml
+++ b/roles/mariadb/tasks/debian.yml
@@ -8,14 +8,14 @@
     - apt-transport-https
 
 - name: Add MariaDB GPG key
-  tags: [mariadb, mariadb-repository]
+  tags: [mariadb]
   apt_key:
     id: F1656F24C74CD1D8
     url: https://mariadb.org/mariadb_release_signing_key.asc
     state: present
 
 - name: Add MariaDB repository
-  tags: [mariadb, mariadb-repository]
+  tags: [mariadb]
   apt_repository:
     repo: "deb [arch={{ 'amd64' if ansible_architecture == 'x86_64' else ansible_architecture }}] https://mirror1.cl.netactuate.com/mariadb/repo/{{ mariadb_server_version }}/{{ ansible_distribution | lower }} {{ ansible_facts.distribution_release }} main"
     state: present
