Add handler restart mariadb server

--- a/roles/mariadb/handlers/main.yml
+++ b/roles/mariadb/handlers/main.yml
@@ -5,3 +5,8 @@
   service:
     name: mariadb
     state: started
+
+- name: restart mariadb server
+  service:
+    name: mariadb
+    state: restarted
