feat(mariadb): Add mariadb_server_mirror support

--- a/roles/mariadb/tasks/redhat.yml
+++ b/roles/mariadb/tasks/redhat.yml
@@ -1,8 +1,14 @@
 ---
+- name: Update ca-certificates
+  yum:
+    name: ca-certificates
+    state: latest
+    update_cache: true
+
 - name: Add MariaDB GPG key
   tags: [mariadb]
   rpm_key:
-    key: http://mirror1.cl.netactuate.com/mariadb/yum/RPM-GPG-KEY-MariaDB
+    key: "{{ mariadb_server_mirror }}/yum/RPM-GPG-KEY-MariaDB"
     state: present
 
 - name: Add MariaDB repository
@@ -10,7 +16,7 @@
   yum_repository:
     name: MariaDB
     description: MariaDB YUM repo
-    baseurl: https://mirror1.cl.netactuate.com/mariadb/yum/{{ mariadb_server_version }}/{{ ansible_distribution | lower }}{{ ansible_distribution_major_version }}-{{ 'amd64' if ansible_architecture == 'x86_64' else ansible_architecture }}
+    baseurl: "{{ mariadb_server_mirror }}/yum/{{ mariadb_server_version }}/{{ ansible_distribution | lower }}{{ ansible_distribution_major_version }}-{{ 'amd64' if ansible_architecture == 'x86_64' else ansible_architecture }}"
     gpgcheck: 1
 
 - name: Install MariaDB Server
