--- a/roles/mariadb/tasks/redhat.yml
+++ b/roles/mariadb/tasks/redhat.yml
@@ -25,3 +25,12 @@
     name: mariadb-server
     state: present
     update_cache: true
+
+- name: Override default my.cnf file
+  template:
+    src: my.cnf.j2
+    dest: /etc/my.cnf.d/server.cnf
+    owner: root
+    group: root
+    mode: 644
+  become: true
