State that ntp_servers could [not] be empty

--- a/roles/chrony/tasks/main.yml
+++ b/roles/chrony/tasks/main.yml
@@ -5,8 +5,8 @@
   tags: [chrony, chrony-validate]
   assert:
     that: ntp_servers is not none and ( ntp_servers | length > 0)
-    fail_msg: "ntp_servers is not set"
-    success_msg: "ntp_servers is defined"
+    fail_msg: "ntp_servers is not set or empty"
+    success_msg: "ntp_servers is defined and not empty"
 
 - name: Load the Debian specific defaults
   include_tasks: debian.yml
