--- a/roles/chrony/tasks/main.yml
+++ b/roles/chrony/tasks/main.yml
@@ -1,12 +1,7 @@
 ---
 # tasks file for chrony
 
-- name: Validate if the ntp_servers is not none
-  tags: [chrony, chrony-validate]
-  assert:
-    that: ntp_servers is not none and ( ntp_servers | length > 0)
-    fail_msg: "ntp_servers is not set or empty"
-    success_msg: "ntp_servers is defined and not empty"
+- include_tasks: validate.yml
 
 - name: Load the Debian specific defaults
   include_tasks: debian.yml
