--- a/roles/chrony/tasks/validate.yml
+++ b/roles/chrony/tasks/validate.yml
@@ -1,9 +1,9 @@
 ---
 # Validate variables used by this role
 
-- name: Validate if the ntp_servers is not none
+- name: Validate if the chrony_servers is not none
   tags: [chrony, chrony-validate]
   assert:
-    that: ntp_servers is not none and ( ntp_servers | length > 0)
-    fail_msg: "ntp_servers is not set or empty"
-    success_msg: "ntp_servers is defined and not empty"
+    that: chrony_servers is not none and ( chrony_servers | length > 0)
+    fail_msg: "chrony_servers is not set or empty"
+    success_msg: "chrony_servers is defined and not empty"
