--- a/roles/chrony/tasks/debian.yml
+++ b/roles/chrony/tasks/debian.yml
@@ -1,5 +1,5 @@
 ---
-- name: Override Chrony defaults for Debian systems.
+- name: Override Chrony defaults for Debian systems
   set_fact:
     chrony_service:  "{{ (chrony_service   == 'DEFAULT')  | ternary ('chronyd',       chrony_service) }}"
     chrony_package:  "{{ (chrony_package   == 'DEFAULT')  | ternary ('chrony',        chrony_package) }}"
