--- a/roles/chrony/tasks/debian.yml
+++ b/roles/chrony/tasks/debian.yml
@@ -1,5 +1,6 @@
 ---
 - name: Override Chrony defaults for Debian systems
+  tags: [ chrony, chrony-config, chrony-validate ]
   set_fact:
     chrony_service:  "{{ (chrony_service   == 'DEFAULT')  | ternary ('chronyd',       chrony_service) }}"
     chrony_package:  "{{ (chrony_package   == 'DEFAULT')  | ternary ('chrony',        chrony_package) }}"
