--- a/roles/chrony/tasks/redhat.yml
+++ b/roles/chrony/tasks/redhat.yml
@@ -1,5 +1,6 @@
 ---
 - name: Override Chrony defaults for RedHat like systems
+  tags: always
   set_fact:
     chrony_service:  "{{ (chrony_service   == 'DEFAULT')  | ternary ('chronyd',      chrony_service) }}"
     chrony_package:  "{{ (chrony_package   == 'DEFAULT')  | ternary ('chrony',       chrony_package) }}"
